refactor: 예외 처리를 위한 getDeclaredConstructor()메소드 추가